News UAT/force-app/main/default/objects/MLE_Tab_Product_Association__c/MLE_Tab_Product_Association__c.object-meta.xml
<CustomObject>
    <label>MLE Tab Product Association</label>
    <nameField>
        <label>MLE Tab Product Associations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MLE Tab Product Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>