News UAT/force-app/main/default/objects/MLE_Tab_Product_Association__c/fields/Associated_Product_Definition__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Product Definition</label>
    <referenceTo>cscfga__Product_Definition__c</referenceTo>
    <relationshipName>MLE_Tabs</relationshipName>
    <type>Lookup</type>
</CustomField>