News UAT/force-app/main/default/objects/MLE_Tab_Product_Association__c/fields/Load_on_Select__c.field-meta.xml
<CustomField>
    <fullName>Load_on_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load on Select</label>
    <type>Checkbox</type>
</CustomField>