News UAT/force-app/main/default/objects/MLE_Tab_Product_Association__c/fields/Product_Definition_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Definition_Label__c</fullName>
    <description>Product Definition Label</description>
    <formula>Associated_Product_Definition__r.cscfga__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Definition Label</inlineHelpText>
    <label>Product Definition Label</label>
    <type>Text</type>
</CustomField>