News UAT/force-app/main/default/objects/MLE_Tab_Product_Association__c/fields/Screen_Flow__c.field-meta.xml
<CustomField>
    <fullName>Screen_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screen Flow</label>
    <referenceTo>cscfga__Screen_Flow__c</referenceTo>
    <relationshipName>MLE_Tabs</relationshipName>
    <type>Lookup</type>
</CustomField>