News UAT/force-app/main/default/objects/MLE_Tab_Product_Association__c/fields/Tab_Order__c.field-meta.xml
<CustomField>
    <fullName>Tab_Order__c</fullName>
    <label>Tab Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>