News UAT/force-app/main/default/objects/MLE_Tab_Product_Association__c/listViews/MLE_Tab_Product_Association.listView-meta.xml
<ListView>
    <fullName>MLE_Tab_Product_Association</fullName>
    <columns>NAME</columns>
    <columns>Associated_Product_Definition__c</columns>
    <columns>Product_Definition_Label__c</columns>
    <columns>Screen_Flow__c</columns>
    <columns>Tab_Order__c</columns>
    <columns>Load_on_Select__c</columns>
    <filterScope>Everything</filterScope>
    <label>MLE Tab Product Association</label>
</ListView>